RESULTS/AutoSpec/raw_results/out-4o-oopsla/012_0001/012_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/012_0001/012_merged.c:43:3: error: unterminated comment
   43 |   /* First while loop invariant */;
      |   ^
